@@ -7,6 +7,12 @@
 #include "Shutdown.h"
 #include "dds/DCPS/Service_Participant.h"
 
+#ifdef ACE_AS_STATIC_LIBS
+#include "dds/DCPS/transport/simpleTCP/SimpleTcp.h"
+#include "dds/DCPS/transport/udp/Udp.h"
+#include "dds/DCPS/transport/multicast/Multicast.h"
+#endif
+
 #include <iostream>
 
 int ACE_TMAIN(int argc, ACE_TCHAR *argv[])
